# llm-output-validator

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: eu-ai-act-context.md  eu-ai-act-risk-classification.md
examples/: catch_hallucinated_citation.py  cross_model_consensus.py  golden_regression.py  injection_detection.py  numeric_boundary_fail.py  validate_response.py
src/llm_output_validator/: __init__.py  cli.py  consensus.py  corpus.py  exceptions.py  exporters.py  models.py  range_table.py  report.py  validator.py
src/llm_output_validator/checks/: __init__.py  citation_check.py  confidence_check.py  consensus_check.py  golden_check.py  injection_check.py  jurisdictional_check.py  numeric_boundary_check.py  schema_check.py  temporal_check.py
src/llm_output_validator/schemas/: llm_response_schema.json
tests/: conftest.py  mock_client.py  test_exporters.py  test_pattern1_schema.py  test_pattern2_citation.py  test_pattern3_numeric.py  test_pattern4_temporal.py  test_pattern5_jurisdictional.py  test_pattern6_confidence.py  test_pattern7_injection.py  test_pattern8_golden.py  test_pattern9_consensus.py  test_properties.py
tests/fixtures/consensus/: germany_corporate_tax.json  ireland_corporate_tax.json  nyc_sales_tax.json  uk_corporation_tax.json  us_federal_brackets_2025.json
tests/fixtures/golden/: eu_vat_de_standard.json  us_ca_standard_rate.json
