[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-output-validator"
version = "0.1.0"
description = "Deterministic verification layer for LLM outputs in compliance contexts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nahid Chowdhury" },
]
keywords = ["llm", "validation", "compliance", "verification", "ai", "testing", "hallucination-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7,<3",
    "jsonschema>=4.22",
    "python-dateutil>=2.9",
]

[project.urls]
Repository = "https://github.com/chowdhury-nahid/llm-output-validator"
Documentation = "https://github.com/chowdhury-nahid/llm-output-validator/blob/main/ARCHITECTURE.md"
Issues = "https://github.com/chowdhury-nahid/llm-output-validator/issues"

[project.scripts]
llm-validate = "llm_output_validator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "hypothesis>=6.100",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_output_validator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["llm_output_validator"]

[tool.coverage.report]
fail_under = 85

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
